--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -3,21 +3,20 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-rgb: 250, 250, 250;
+  --foreground-rgb: 255, 255, 255;
+  --background-rgb: 300, 300, 300;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-rgb: 0, 0, 0;
+    --background-rgb: 300, 300, 300;
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background:
-      rgb(var(--background-rgb))
+  background: rgb(var(--background-rgb));
 }
 
 @layer utilities {
@@ -25,4 +24,3 @@ body {
     text-wrap: balance;
   }
 }
-
